viz: Assign Display-specific trace ids.

Assign each Display a separate starting point for the trace ids, so
that the trace-ids do not all start from zero, which makes it difficult
to associate the trace-events with the Display intances.

BUG=879884

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I79146409a5acff362c348fb32493a247f6736f72
Reviewed-on: https://chromium-review.googlesource.com/1222586
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590805}
Former-commit-id: 1647a8ece33b4b8bba5d2d59ed3b3c8f0d1da0da